force-app/main/default/objects/LegacyFulfillment__c/fields/Order_Creator_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Creator_Email__c</fullName>
    <description>Used for the shipping correction process, the email alert that is sent by checking the shipping correction box needs an email on the order</description>
    <label>Order Creator Email</label>
    <type>Email</type>
</CustomField>