force-app/main/default/objects/LegacyFulfillment__c/fields/Order_Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Special_Notes__c</fullName>
    <label>Order Special Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>