force-app/main/default/objects/LegacyFulfillment__c/fields/OrderLine__c.field-meta.xml
<CustomField>
    <fullName>OrderLine__c</fullName>
    <formula>IF( ISBLANK(OrderProductLine__c), 
HYPERLINK(&apos;/&apos;+OrderServiceLine__c, OrderServiceLine__r.kugo2p__Service__r.Name), 
HYPERLINK(&apos;/&apos;+OrderProductLine__c, OrderProductLine__r.kugo2p__Product__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Line</label>
    <type>Text</type>
</CustomField>