force-app/main/default/objects/LegacyFulfillment__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>Order Number</label>
    <referenceTo>kugo2p__SalesOrder__c</referenceTo>
    <relationshipLabel>LegacyFulfillments</relationshipLabel>
    <relationshipName>LegacyFulfillments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>