force-app/main/default/objects/LegacyFulfillment__c/fields/OrderServiceLine__c.field-meta.xml
<CustomField>
    <fullName>OrderServiceLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Service Line</label>
    <referenceTo>kugo2p__SalesOrderServiceLine__c</referenceTo>
    <relationshipLabel>LegacyFulfillments</relationshipLabel>
    <relationshipName>LegacyFulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>