force-app/main/default/objects/LegacyFulfillment__c/fields/Overdue_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by the overdue fulfillment email workflow to confirm an email has been sent</description>
    <inlineHelpText>Email Reminder for an Overdue Activity has been Sent on this Fulfillment</inlineHelpText>
    <label>Overdue Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>