force-app/main/default/objects/LegacyFulfillment__c/fields/Owner_Info__c.field-meta.xml
<CustomField>
    <fullName>Owner_Info__c</fullName>
    <formula>Fulfillment_Owner__r.FirstName+&quot; &quot;+Fulfillment_Owner__r.LastName+&quot;:&quot;+&quot; &quot;+Fulfillment_Owner__r.Phone+&quot; &quot;+&quot;/&quot;+&quot; &quot;+Fulfillment_Owner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Info</label>
    <type>Text</type>
</CustomField>