force-app/main/default/objects/LegacyFulfillment__c/fields/Packaged_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Packaged_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents packaged workflow from firing multiple times</description>
    <inlineHelpText>Prevents a workflow from firing, if you can see this field please contact tech support</inlineHelpText>
    <label>Packaged Email Sent</label>
    <type>Checkbox</type>
</CustomField>