force-app/main/default/objects/LegacyFulfillment__c/fields/ParentFulfillment__c.field-meta.xml
<CustomField>
    <fullName>ParentFulfillment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Fulfillment</label>
    <referenceTo>LegacyFulfillment__c</referenceTo>
    <relationshipLabel>Related Fulfillments</relationshipLabel>
    <relationshipName>Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>