force-app/main/default/objects/LegacyFulfillment__c/fields/Plaque_Type__c.field-meta.xml
<CustomField>
    <fullName>Plaque_Type__c</fullName>
    <formula>TEXT(OrderProductLine__r.Plaque_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaque Type RETIRED</label>
    <type>Text</type>
</CustomField>