force-app/main/default/objects/LegacyFulfillment__c/fields/Preferred_Delivery_Area__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Delivery_Area__c</fullName>
    <description>Delivery Area for Postcards or other direct to consumer items</description>
    <inlineHelpText>Delivery Area for Postcards or other direct to consumer items</inlineHelpText>
    <label>Preferred Delivery Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>