force-app/main/default/objects/LegacyFulfillment__c/fields/PrimaryRecipient__c.field-meta.xml
<CustomField>
    <fullName>PrimaryRecipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LegacyFulfillments</relationshipLabel>
    <relationshipName>LegacyFulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>