force-app/main/default/objects/LegacyFulfillment__c/fields/Product_Template__c.field-meta.xml
<CustomField>
    <fullName>Product_Template__c</fullName>
    <description>Product Template Chosen (created for marketing services postcards initially)</description>
    <inlineHelpText>Product Template Chosen by Client</inlineHelpText>
    <label>Product Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>