force-app/main/default/objects/LegacyFulfillment__c/fields/Product_Templates_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Product_Templates_Finalized__c</fullName>
    <formula>Market__r.Product_Templates_Finalized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Templates Finalized</label>
    <type>Date</type>
</CustomField>