force-app/main/default/objects/LegacyFulfillment__c/fields/Product_Zone__c.field-meta.xml
<CustomField>
    <fullName>Product_Zone__c</fullName>
    <description>Lookup to orderproductline that shows the zone, used for LA Times magazine profiles</description>
    <formula>TEXT(OrderProductLine__r.Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LA Times Zone</inlineHelpText>
    <label>Product Zone</label>
    <type>Text</type>
</CustomField>