force-app/main/default/objects/LegacyFulfillment__c/fields/Production_Owner__c.field-meta.xml
<CustomField>
    <fullName>Production_Owner__c</fullName>
    <formula>Market__r.Production_Owner__r.User_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production Owner</label>
    <type>Text</type>
</CustomField>