force-app/main/default/objects/LegacyFulfillment__c/fields/Publication_month__c.field-meta.xml
<CustomField>
    <fullName>Publication_month__c</fullName>
    <formula>Market__r.Publication_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication month</label>
    <type>Text</type>
</CustomField>