force-app/main/default/objects/LegacyFulfillment__c/fields/Renewal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Amount__c</fullName>
    <label>Renewal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>