force-app/main/default/objects/LegacyFulfillment__c/fields/Retargeting_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Retargeting_Tracker__c</fullName>
    <label>Retargeting Tracker</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>