force-app/main/default/objects/LegacyFulfillment__c/fields/Return_Category__c.field-meta.xml
<CustomField>
    <fullName>Return_Category__c</fullName>
    <label>Return Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returned - FSP issue</fullName>
            </value>
            <value>
                <fullName>Returned - Vendor issue</fullName>
            </value>
            <value>
                <fullName>Returned - Client refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>