force-app/main/default/objects/LegacyFulfillment__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <label>Return Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>