force-app/main/default/objects/LegacyFulfillment__c/fields/Round_2__c.field-meta.xml
<CustomField>
    <fullName>Round_2__c</fullName>
    <formula>Market__r.Proof_Round_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round 2</label>
    <type>Date</type>
</CustomField>