force-app/main/default/objects/LegacyFulfillment__c/fields/Rush__c.field-meta.xml
<CustomField>
    <fullName>Rush__c</fullName>
    <formula>OrderProductLine__r.Rush__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rush</label>
    <type>Checkbox</type>
</CustomField>