force-app/main/default/objects/LegacyFulfillment__c/fields/Second_Inscription_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Second_Inscription_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when sending the second inscription email</inlineHelpText>
    <label>Second Inscription Attempt</label>
    <type>Checkbox</type>
</CustomField>