force-app/main/default/objects/LegacyFulfillment__c/fields/Send_to_Proofing_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Proofing_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reprint checklist field</description>
    <inlineHelpText>Has the Reprint been sent to Proofing for approval?</inlineHelpText>
    <label>Send to Proofing for Approval</label>
    <type>Checkbox</type>
</CustomField>