force-app/main/default/objects/LegacyFulfillment__c/fields/sent_to_print__c.field-meta.xml
<CustomField>
    <fullName>sent_to_print__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Perfect order Field</description>
    <inlineHelpText>Once approved, was the order sent to production for printing?</inlineHelpText>
    <label>sent to print</label>
    <type>Checkbox</type>
</CustomField>