force-app/main/default/objects/LegacyFulfillment__c/fields/Sent_to_Proofing__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Proofing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Perfect Order Checklist Field</description>
    <inlineHelpText>Has the status been changed to Proof Submission for Editing (award brochures) OR Send Initial Proof with notes on any items missing?</inlineHelpText>
    <label>Sent to Proofing</label>
    <type>Checkbox</type>
</CustomField>