force-app/main/default/objects/LegacyFulfillment__c/fields/Sent_to_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Traffic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to Traffic</label>
    <type>Checkbox</type>
</CustomField>