force-app/main/default/objects/LegacyFulfillment__c/fields/Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date__c</fullName>
    <label>Ship Date</label>
    <type>DateTime</type>
</CustomField>