force-app/main/default/objects/LegacyFulfillment__c/fields/Shipped__c.field-meta.xml
<CustomField>
    <fullName>Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked automatically when a tracking number is added, can be checked manually</description>
    <inlineHelpText>Order has been shipped (auto-checked when a tracking number is added)</inlineHelpText>
    <label>Shipped</label>
    <type>Checkbox</type>
</CustomField>