force-app/main/default/objects/LegacyFulfillment__c/fields/Shipped_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents the shipped workflow from firing multiple times</description>
    <inlineHelpText>This field prevents a workflow from firing - if you can see it please contact tech support</inlineHelpText>
    <label>Shipped Email Sent</label>
    <type>Checkbox</type>
</CustomField>