force-app/main/default/objects/LegacyFulfillment__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <formula>OrderNumber__r.kugo2p__ShipToCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>