force-app/main/default/objects/LegacyFulfillment__c/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <defaultValue>&quot;USA&quot;</defaultValue>
    <label>Shipping Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>