force-app/main/default/objects/LegacyFulfillment__c/fields/Shipping_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip__c</fullName>
    <formula>OrderNumber__r.kugo2p__ShipToZipPostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Zip</label>
    <type>Text</type>
</CustomField>