force-app/main/default/objects/LegacyFulfillment__c/fields/Social_Media_Platform__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Platform__c</fullName>
    <formula>TEXT(PrimaryRecipient__r.Social_Media_Platform__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Social Media Platform</label>
    <type>Text</type>
</CustomField>