force-app/main/default/objects/LegacyFulfillment__c/fields/Social_Post_12__c.field-meta.xml
<CustomField>
    <fullName>Social_Post_12__c</fullName>
    <label>Social Post 12</label>
    <type>Url</type>
</CustomField>