force-app/main/default/objects/LegacyFulfillment__c/fields/Social_Post_4__c.field-meta.xml
<CustomField>
    <fullName>Social_Post_4__c</fullName>
    <label>Social Post 4</label>
    <type>Url</type>
</CustomField>