force-app/main/default/objects/LegacyFulfillment__c/fields/Social_Post_7__c.field-meta.xml
<CustomField>
    <fullName>Social_Post_7__c</fullName>
    <label>Social Post 7</label>
    <type>Url</type>
</CustomField>