force-app/main/default/objects/LegacyFulfillment__c/fields/Social_Post_Share_Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Social_Post_Share_Service_Status__c</fullName>
    <description>This field captures whether a client has chosen to participate in the social post sharing service or not. Yes value means the client has added FSP as an editor to business page. No value means the client has opted out of the service</description>
    <inlineHelpText>This field captures whether a client has chosen to participate in the social post sharing service or not. Yes value means the client has added FSP as an editor to business page. No value means the client has opted out of the service</inlineHelpText>
    <label>Social Post Sharing Service?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>