force-app/main/default/objects/LegacyFulfillment__c/fields/Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Change_Date__c</fullName>
    <label>Stage Change Date</label>
    <type>Date</type>
</CustomField>