force-app/main/default/objects/LegacyFulfillment__c/fields/Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Status_Duration__c</fullName>
    <formula>TODAY()- Stage_Change_Date__c</formula>
    <label>Status Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>