force-app/main/default/objects/LegacyFulfillment__c/fields/Status_Xfer__c.field-meta.xml
<CustomField>
    <fullName>Status_Xfer__c</fullName>
    <description>Hidden Field, Used to provide choices for &quot;status&quot; field during log a call script.</description>
    <label>Status Xfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Change</fullName>
                <default>true</default>
                <label>No Change</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Content Received</fullName>
            </value>
            <value>
                <fullName>In Revision</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>To Print</fullName>
            </value>
            <value>
                <fullName>Product Created</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closed No Response</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Ready for FTP</fullName>
            </value>
            <value>
                <fullName>Write copy</fullName>
            </value>
            <value>
                <fullName>In Revision - Urgent</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete - 1st Request</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete - 2nd Request</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete - 3rd Request</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete – 4th Request</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete – Content Needed</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Incomplete – Approval Needed</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Content Needed</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Approval Needed</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Open Fulfillment</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Urgent Response Needed</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete - Follow Up Needed</fullName>
            </value>
            <value>
                <fullName>CSR Appointment Complete</fullName>
            </value>
            <value>
                <fullName>CSR Appointment NOT Complete - Closed</fullName>
            </value>
            <value>
                <fullName>CSR Follow Up 1 Complete</fullName>
            </value>
            <value>
                <fullName>CST Follow Up 1 Complete - Open Fulfillment</fullName>
            </value>
            <value>
                <fullName>CSR Follow Up 2 Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>