force-app/main/default/objects/LegacyFulfillment__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <formula>OrderProductLine__r.kugo2p__Product__r.kugo2p__ReferenceProduct__r.Subscription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription</label>
    <type>Checkbox</type>
</CustomField>