force-app/main/default/objects/LegacyFulfillment__c/fields/Template_Choice_Web__c.field-meta.xml
<CustomField>
    <fullName>Template_Choice_Web__c</fullName>
    <description>Template choice for web-to-print editor</description>
    <label>Template Choice Web</label>
    <length>255</length>
    <type>Text</type>
</CustomField>