force-app/main/default/objects/LegacyFulfillment__c/fields/Template_Sent__c.field-meta.xml
<CustomField>
    <fullName>Template_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Template Sent</description>
    <label>Template Sent</label>
    <type>Checkbox</type>
</CustomField>