force-app/main/default/objects/LegacyFulfillment__c/fields/Testimonial_collection_campaign_code__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_collection_campaign_code__c</fullName>
    <label>Testimonial collection campaign code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>