force-app/main/default/objects/LegacyFulfillment__c/fields/Testimonial_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Display_Order__c</fullName>
    <label>Testimonial Display Order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>