force-app/main/default/objects/LegacyFulfillment__c/fields/Testimonial_Display_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Display_Social_Media__c</fullName>
    <label>Testimonial Display Social Media</label>
    <length>10</length>
    <type>Text</type>
</CustomField>