force-app/main/default/objects/LegacyFulfillment__c/fields/Testimonial_Display_Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Display_Star_Rating__c</fullName>
    <label>Testimonial Display Star Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>