force-app/main/default/objects/LegacyFulfillment__c/fields/Third_Inscription_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Third_Inscription_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check after the third inscription info email</inlineHelpText>
    <label>Third Inscription Attempt</label>
    <type>Checkbox</type>
</CustomField>