force-app/main/default/objects/LegacyFulfillment__c/fields/True_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>True_Last_Activity_Date__c</fullName>
    <description>Displays created date if the last activity date is null, else displays the last activity date</description>
    <formula>IF((ISNULL(LastActivityDate)),DATEVALUE(CreatedDate),LastActivityDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last Activity Date Counting Creation</inlineHelpText>
    <label>True Last Activity Date</label>
    <type>Date</type>
</CustomField>