force-app/main/default/objects/LegacyFulfillment__c/fields/Turnaround_Days__c.field-meta.xml
<CustomField>
    <fullName>Turnaround_Days__c</fullName>
    <formula>/*MIN( Days_Since_Last_Creation__c , Days_Since_Last_Activity__c , Status_Duration__c )*/

IF(AND(ISNULL(Days_Since_Last_Creation__c) , ISNULL(Days_Since_Last_Activity__c)),  Status_Duration__c ,

IF( AND(ISNULL(Days_Since_Last_Activity__c), ISNULL(Status_Duration__c)),Days_Since_Last_Creation__c,

IF(AND(ISNULL( Status_Duration__c),ISNULL( Days_Since_Last_Creation__c)), Days_Since_Last_Activity__c, 

IF(ISNULL(Days_Since_Last_Creation__c) , MIN( Days_Since_Last_Activity__c,  Status_Duration__c ),
IF( ISNULL(Days_Since_Last_Activity__c), MIN( Days_Since_Last_Creation__c , Status_Duration__c ),
IF(ISNULL( Status_Duration__c), MIN( Days_Since_Last_Creation__c , Days_Since_Last_Activity__c),
MIN( Days_Since_Last_Creation__c , Days_Since_Last_Activity__c , Status_Duration__c )))))))</formula>
    <label>Turnaround Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>