force-app/main/default/objects/LegacyFulfillment__c/fields/Use_Approved_Template_for_4_Page_Reprint__c.field-meta.xml
<CustomField>
    <fullName>Use_Approved_Template_for_4_Page_Reprint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>E reprint checklist field</description>
    <inlineHelpText>Has the approved 4 page reprint template been used?</inlineHelpText>
    <label>Use Approved Template for 4 Page Reprint</label>
    <type>Checkbox</type>
</CustomField>